[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinehub"
version = "0.1.0"
authors = [
    {name = "Rahul Paul", email = "paul.rahulxj100@gmail.com"},
]
description = "A flexible data pipeline library for custom data processing workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["pipeline", "data", "processing", "workflow", "etl"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8", "mypy"]

[project.urls]
"Homepage" = "https://github.com/rahulxj100/pipelinehub"
"Bug Reports" = "https://github.com/rahulxj100/pipelinehub/issues"
"Source" = "https://github.com/rahulxj100/pipelinehub"

[tool.setuptools.packages.find]
where = ["."]
include = ["datapipeline*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]